gitignore streamlit folium venv

--- a/.gitignore
+++ b/.gitignore
@@ -12344,3 +12344,162 @@ venv/Lib/site-packages/shapely-2.0.6.dist-info/WHEEL
 venv/Lib/site-packages/shapely.libs/geos_c-b1ae1e27c3e522f9b7836b33163a0f55.dll
 venv/Lib/site-packages/shapely.libs/geos-23a442ac2dc21ec50035b705fec97a5a.dll
 venv/Lib/site-packages/shapely.libs/msvcp140-a69f03e9a25e87aaadb3f9acf048914d.dll
+venv/Lib/site-packages/branca/__init__.py
+venv/Lib/site-packages/branca/_cnames.json
+venv/Lib/site-packages/branca/_schemes.json
+venv/Lib/site-packages/branca/_version.py
+venv/Lib/site-packages/branca/colormap.py
+venv/Lib/site-packages/branca/element.py
+venv/Lib/site-packages/branca/scheme_base_codes.json
+venv/Lib/site-packages/branca/scheme_info.json
+venv/Lib/site-packages/branca/utilities.py
+venv/Lib/site-packages/branca/__pycache__/__init__.cpython-311.pyc
+venv/Lib/site-packages/branca/__pycache__/_version.cpython-311.pyc
+venv/Lib/site-packages/branca/__pycache__/colormap.cpython-311.pyc
+venv/Lib/site-packages/branca/__pycache__/element.cpython-311.pyc
+venv/Lib/site-packages/branca/__pycache__/utilities.cpython-311.pyc
+venv/Lib/site-packages/branca/templates/color_scale.js
+venv/Lib/site-packages/branca-0.7.2.dist-info/INSTALLER
+venv/Lib/site-packages/branca-0.7.2.dist-info/LICENSE.txt
+venv/Lib/site-packages/branca-0.7.2.dist-info/METADATA
+venv/Lib/site-packages/branca-0.7.2.dist-info/RECORD
+venv/Lib/site-packages/branca-0.7.2.dist-info/top_level.txt
+venv/Lib/site-packages/branca-0.7.2.dist-info/WHEEL
+venv/Lib/site-packages/folium/__init__.py
+venv/Lib/site-packages/folium/_version.py
+venv/Lib/site-packages/folium/elements.py
+venv/Lib/site-packages/folium/features.py
+venv/Lib/site-packages/folium/folium.py
+venv/Lib/site-packages/folium/map.py
+venv/Lib/site-packages/folium/raster_layers.py
+venv/Lib/site-packages/folium/template.py
+venv/Lib/site-packages/folium/utilities.py
+venv/Lib/site-packages/folium/vector_layers.py
+venv/Lib/site-packages/folium/__pycache__/__init__.cpython-311.pyc
+venv/Lib/site-packages/folium/__pycache__/_version.cpython-311.pyc
+venv/Lib/site-packages/folium/__pycache__/elements.cpython-311.pyc
+venv/Lib/site-packages/folium/__pycache__/features.cpython-311.pyc
+venv/Lib/site-packages/folium/__pycache__/folium.cpython-311.pyc
+venv/Lib/site-packages/folium/__pycache__/map.cpython-311.pyc
+venv/Lib/site-packages/folium/__pycache__/raster_layers.cpython-311.pyc
+venv/Lib/site-packages/folium/__pycache__/template.cpython-311.pyc
+venv/Lib/site-packages/folium/__pycache__/utilities.cpython-311.pyc
+venv/Lib/site-packages/folium/__pycache__/vector_layers.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__init__.py
+venv/Lib/site-packages/folium/plugins/antpath.py
+venv/Lib/site-packages/folium/plugins/beautify_icon.py
+venv/Lib/site-packages/folium/plugins/boat_marker.py
+venv/Lib/site-packages/folium/plugins/draw.py
+venv/Lib/site-packages/folium/plugins/dual_map.py
+venv/Lib/site-packages/folium/plugins/encoded.py
+venv/Lib/site-packages/folium/plugins/fast_marker_cluster.py
+venv/Lib/site-packages/folium/plugins/feature_group_sub_group.py
+venv/Lib/site-packages/folium/plugins/float_image.py
+venv/Lib/site-packages/folium/plugins/fullscreen.py
+venv/Lib/site-packages/folium/plugins/geocoder.py
+venv/Lib/site-packages/folium/plugins/groupedlayercontrol.py
+venv/Lib/site-packages/folium/plugins/heat_map_withtime.py
+venv/Lib/site-packages/folium/plugins/heat_map.py
+venv/Lib/site-packages/folium/plugins/locate_control.py
+venv/Lib/site-packages/folium/plugins/marker_cluster.py
+venv/Lib/site-packages/folium/plugins/measure_control.py
+venv/Lib/site-packages/folium/plugins/minimap.py
+venv/Lib/site-packages/folium/plugins/mouse_position.py
+venv/Lib/site-packages/folium/plugins/pattern.py
+venv/Lib/site-packages/folium/plugins/polyline_offset.py
+venv/Lib/site-packages/folium/plugins/polyline_text_path.py
+venv/Lib/site-packages/folium/plugins/realtime.py
+venv/Lib/site-packages/folium/plugins/scroll_zoom_toggler.py
+venv/Lib/site-packages/folium/plugins/search.py
+venv/Lib/site-packages/folium/plugins/semicircle.py
+venv/Lib/site-packages/folium/plugins/side_by_side.py
+venv/Lib/site-packages/folium/plugins/tag_filter_button.py
+venv/Lib/site-packages/folium/plugins/terminator.py
+venv/Lib/site-packages/folium/plugins/time_slider_choropleth.py
+venv/Lib/site-packages/folium/plugins/timeline.py
+venv/Lib/site-packages/folium/plugins/timestamped_geo_json.py
+venv/Lib/site-packages/folium/plugins/timestamped_wmstilelayer.py
+venv/Lib/site-packages/folium/plugins/treelayercontrol.py
+venv/Lib/site-packages/folium/plugins/vectorgrid_protobuf.py
+venv/Lib/site-packages/folium/plugins/__pycache__/__init__.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/antpath.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/beautify_icon.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/boat_marker.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/draw.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/dual_map.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/encoded.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/fast_marker_cluster.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/feature_group_sub_group.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/float_image.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/fullscreen.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/geocoder.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/groupedlayercontrol.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/heat_map_withtime.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/heat_map.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/locate_control.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/marker_cluster.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/measure_control.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/minimap.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/mouse_position.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/pattern.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/polyline_offset.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/polyline_text_path.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/realtime.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/scroll_zoom_toggler.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/search.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/semicircle.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/side_by_side.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/tag_filter_button.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/terminator.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/time_slider_choropleth.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/timeline.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/timestamped_geo_json.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/timestamped_wmstilelayer.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/treelayercontrol.cpython-311.pyc
+venv/Lib/site-packages/folium/plugins/__pycache__/vectorgrid_protobuf.cpython-311.pyc
+venv/Lib/site-packages/folium/templates/leaflet_heat.min.js
+venv/Lib/site-packages/folium/templates/pa7_hm.min.js
+venv/Lib/site-packages/folium/templates/pa7_leaflet_hm.min.js
+venv/Lib/site-packages/folium-0.17.0.dist-info/INSTALLER
+venv/Lib/site-packages/folium-0.17.0.dist-info/LICENSE.txt
+venv/Lib/site-packages/folium-0.17.0.dist-info/METADATA
+venv/Lib/site-packages/folium-0.17.0.dist-info/RECORD
+venv/Lib/site-packages/folium-0.17.0.dist-info/top_level.txt
+venv/Lib/site-packages/folium-0.17.0.dist-info/WHEEL
+venv/Lib/site-packages/streamlit_folium/__init__.py
+venv/Lib/site-packages/streamlit_folium/__pycache__/__init__.cpython-311.pyc
+venv/Lib/site-packages/streamlit_folium/frontend/build/asset-manifest.json
+venv/Lib/site-packages/streamlit_folium/frontend/build/bootstrap.min.css
+venv/Lib/site-packages/streamlit_folium/frontend/build/index.html
+venv/Lib/site-packages/streamlit_folium/frontend/build/static/js/main.ae363560.js
+venv/Lib/site-packages/streamlit_folium/frontend/build/static/js/main.ae363560.js.LICENSE.txt
+venv/Lib/site-packages/streamlit_folium/frontend/build/static/js/main.ae363560.js.map
+venv/Lib/site-packages/streamlit_folium-0.22.0.dist-info/INSTALLER
+venv/Lib/site-packages/streamlit_folium-0.22.0.dist-info/LICENSE
+venv/Lib/site-packages/streamlit_folium-0.22.0.dist-info/METADATA
+venv/Lib/site-packages/streamlit_folium-0.22.0.dist-info/RECORD
+venv/Lib/site-packages/streamlit_folium-0.22.0.dist-info/REQUESTED
+venv/Lib/site-packages/streamlit_folium-0.22.0.dist-info/top_level.txt
+venv/Lib/site-packages/streamlit_folium-0.22.0.dist-info/WHEEL
+venv/Lib/site-packages/xyzservices/__init__.py
+venv/Lib/site-packages/xyzservices/lib.py
+venv/Lib/site-packages/xyzservices/providers.py
+venv/Lib/site-packages/xyzservices/__pycache__/__init__.cpython-311.pyc
+venv/Lib/site-packages/xyzservices/__pycache__/lib.cpython-311.pyc
+venv/Lib/site-packages/xyzservices/__pycache__/providers.cpython-311.pyc
+venv/Lib/site-packages/xyzservices/data/__init__.py
+venv/Lib/site-packages/xyzservices/data/providers.json
+venv/Lib/site-packages/xyzservices/data/__pycache__/__init__.cpython-311.pyc
+venv/Lib/site-packages/xyzservices/tests/__init__.py
+venv/Lib/site-packages/xyzservices/tests/test_lib.py
+venv/Lib/site-packages/xyzservices/tests/test_providers.py
+venv/Lib/site-packages/xyzservices/tests/__pycache__/__init__.cpython-311.pyc
+venv/Lib/site-packages/xyzservices/tests/__pycache__/test_lib.cpython-311.pyc
+venv/Lib/site-packages/xyzservices/tests/__pycache__/test_providers.cpython-311.pyc
+venv/Lib/site-packages/xyzservices-2024.6.0.dist-info/INSTALLER
+venv/Lib/site-packages/xyzservices-2024.6.0.dist-info/LICENSE
+venv/Lib/site-packages/xyzservices-2024.6.0.dist-info/METADATA
+venv/Lib/site-packages/xyzservices-2024.6.0.dist-info/RECORD
+venv/Lib/site-packages/xyzservices-2024.6.0.dist-info/top_level.txt
+venv/Lib/site-packages/xyzservices-2024.6.0.dist-info/WHEEL
+venv/share/xyzservices/providers.json
