--- a/.gitignore
+++ b/.gitignore
@@ -20783,3 +20783,5 @@ venv/Lib/site-packages/openpyxl-3.1.5.dist-info/RECORD
 venv/Lib/site-packages/openpyxl-3.1.5.dist-info/REQUESTED
 venv/Lib/site-packages/openpyxl-3.1.5.dist-info/top_level.txt
 venv/Lib/site-packages/openpyxl-3.1.5.dist-info/WHEEL
+
+geoclass_algorithm2.ipynb
