--- a/.gitignore
+++ b/.gitignore
@@ -20785,3 +20785,4 @@ venv/Lib/site-packages/openpyxl-3.1.5.dist-info/top_level.txt
 venv/Lib/site-packages/openpyxl-3.1.5.dist-info/WHEEL
 
 geoclass_algorithm2.ipynb
+geo_files/ubc_View_My_Courses_unedited - oka test.xlsx
