--- a/.gitignore
+++ b/.gitignore
@@ -20788,3 +20788,4 @@ geoclass_algorithm2.ipynb
 geo_files/ubc_View_My_Courses_unedited - oka test.xlsx
 geo_files/ubc_View_My_Courses_unedited - ath test.xlsx
 test_script.py
+geo_ubc_classes.code-workspace
