--- a/.gitignore
+++ b/.gitignore
@@ -20787,3 +20787,5 @@ venv/Lib/site-packages/openpyxl-3.1.5.dist-info/WHEEL
 geoclass_algorithm2.ipynb
 geo_files/ubc_View_My_Courses_unedited - oka test.xlsx
 geo_files/ubc_View_My_Courses_unedited - ath test.xlsx
+geo_ubc_classes.code-workspace
+test_script.py
