--- a/.gitignore
+++ b/.gitignore
@@ -20789,3 +20789,4 @@ geo_files/ubc_View_My_Courses_unedited - oka test.xlsx
 geo_files/ubc_View_My_Courses_unedited - ath test.xlsx
 geo_ubc_classes.code-workspace
 test_script.py
+View_My_Courses (4).xlsx
