completed new algorithm

--- a/.gitignore
+++ b/.gitignore
@@ -20790,3 +20790,4 @@ geo_files/ubc_View_My_Courses_unedited - ath test.xlsx
 geo_ubc_classes.code-workspace
 test_script.py
 View_My_Courses (4).xlsx
+gclss_prep copy.py
