updated august 2025 building geojson

--- a/.gitignore
+++ b/.gitignore
@@ -20791,3 +20791,5 @@ geo_ubc_classes.code-workspace
 test_script.py
 View_My_Courses (4).xlsx
 gclss_prep copy.py
+geo_files/geo_ubc_class.ipynb
+geo_files/geopandas_try.ipynb
