--- a/.gitignore
+++ b/.gitignore
@@ -20793,3 +20793,4 @@ View_My_Courses (4).xlsx
 gclss_prep copy.py
 geo_files/geo_ubc_class.ipynb
 geo_files/geopandas_try.ipynb
+View_My_Courses (5).xlsx
