--- a/.gitignore
+++ b/.gitignore
@@ -20794,3 +20794,4 @@ gclss_prep copy.py
 geo_files/geo_ubc_class.ipynb
 geo_files/geopandas_try.ipynb
 View_My_Courses (5).xlsx
+static/finding view my courses on workday.pdf
